plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.version
group = project.group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Terraformers maven for ModMenu.
	maven { name = 'Terraformers'; url = 'https://maven.terraformersmc.com/' }
	// Shedaniel maven for Cloth Config.
	maven { name = 'Shedaniel'; url = 'https://maven.shedaniel.me/' }
	// Fayber Config is published to the local maven repo by its own `publishToMavenLocal`.
	mavenLocal()
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// ModMenu and Cloth Config (optional, compileOnly on 26.x)
	compileOnly "com.terraformersmc:modmenu:18.0.0"
	compileOnly "me.shedaniel.cloth:cloth-config-fabric:26.1.154"

	// Fayber Config (optional, compileOnly; preferred over Cloth when installed at runtime).
	// runtimeOnly pulls it into the dev client too, so the dev boot exercises the integration.
	compileOnly "net.fayber:fayber-config:1.0.0"
	runtimeOnly "net.fayber:fayber-config:1.0.0"
}

processResources {
	inputs.property 'version', project.version
	inputs.property 'minecraft_version', project.minecraft_version
	inputs.property 'loader_version', project.loader_version
	filesMatching('fabric.mod.json') {
		expand 'version': project.version,
				'minecraft_version': project.minecraft_version,
				'loader_version': project.loader_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	from('LICENSE') {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			from components.java
		}
	}
}
